added more methods to the messages controller
